responsive part for mobile and tab added

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <div id="hero_image">
           <div id="image_background_ellipse"></div>
-          <img src="statics/images/user_img.png" height="617.24px" width="538px" alt="Hero Image" />
+          <img src="statics/images/user_img.png" alt="Hero Image" />
         </div>  <!-- #hero_image end -->
       </div>  <!-- #hero_section end -->
 
