image size optimized for loading

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <div id="hero_image">
           <div id="image_background_ellipse"></div>
-          <img src="statics/images/user_img.png" alt="Hero Image" />
+          <img src="statics/images/user_img.webp" alt="Hero Image" />
         </div>  <!-- #hero_image end -->
       </div>  <!-- #hero_section end -->
 
@@ -220,8 +220,8 @@
 
               <div class="left_image_right_text">
                 <div class="image_container">
-                  <img class="image_1" src="statics/images/site_image.png" alt="Hero Image" />
-                  <img class="image_2" src="statics/images/site_image.png" alt="Hero Image" />
+                  <img class="image_1" src="statics/images/site_image.webp" alt="Hero Image" />
+                  <img class="image_2" src="statics/images/site_image.webp" alt="Hero Image" />
                 </div>
                 <div class="right_text">
                   <i>UX case study</i>
@@ -245,8 +245,8 @@
                   </div>
                 </div>
                 <div class="image_container">
-                  <img class="image_1" src="statics/images/site_image.png" alt="Hero Image" />
-                  <img class="image_2" src="statics/images/site_image.png" alt="Hero Image" />
+                  <img class="image_1" src="statics/images/site_image.webp" alt="Hero Image" />
+                  <img class="image_2" src="statics/images/site_image.webp" alt="Hero Image" />
                 </div>
               </div>  <!-- .right_image_left_text end -->
           </div>  <!-- #my_portfolio_section end -->
